...
            ),
          ),
          Row(
            children: [
              Expanded(
                child: CustomAuthButton(
                  text: "انشاء حساب",
                  isActive: signUp,
                  onPressed: () {
                    setState(() {
                      signIn = false;
                      signUp = true;
                    });
                  },
                ),
              ),
              SizedBox(width: 10.w),
              Expanded(
                child: CustomAuthButton(
                  text: "تسجيل الدخول",
                  isActive: signIn,
                  onPressed: () {
                    setState(() {
                      signIn = true;
                      signUp = false;
                    });
...
