...
                            await context.read<AuthCubit>().login(
                              email: email!,
                              password: password!,
                            );
                          }
                        },
                        text: "ابدأ الان",
                        isLoading: isLoading,
                      );
                    },
                  ),
                ),
              ],
...
