...
            SizedBox(height: 10.h),
            DropdownButtonFormField(
              items: [
                DropdownMenuItem(value: "البناء", child: Text("البناء")),
                DropdownMenuItem(value: "الكهرباء", child: Text("الكهرباء")),
                DropdownMenuItem(value: "السباكة", child: Text("السباكة")),
                DropdownMenuItem(value: "البرمجة", child: Text("البرمجة")),
              ],
              onChanged: (value) {
                category = value;
              },
              decoration: InputDecoration(
                border: OutlineInputBorder(
...
                                category: category,
                                experience: experience,
                              ),
                            );
                          }
                        },
                        text: "حفظ التغييرات",
                        isLoading: isLoading,
                      );
                    },
                  ),
                ),
              ],
...
